kubernetes/apps/homepage/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/httproute.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  labels:
    ipallowlist: "true"
    auth: "required"
  annotations:
    gatus.home-operations.com/endpoint: |
      url: http://homepage.homepage.svc.cluster.local:3000
      alerts:
        - type: discord
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - axis.scottmckendry.tech
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
